# thesis_ddm

./: .gitignore  README.md  cross_validation.py  directed_ddm.stan  directed_ddm_sim.py  directed_ddm_utils.py  fit_directed_ddm.py  pyproject.toml  results_directed_ddm.py  slurm_integrative_ddm_train.sh  slurm_job_integrative_ddm_train.sh
data/: directed_ddm_simdata.mat
directed_model/: analysis.py  analysis_utils.py  data_check.py  directed_ddm  directed_ddm.stan  directed_ddm_data.json  directed_ddm_sim.py  directed_ddm_utils.py  fit_directed_ddm.py  fit_factorial_directed_ddm.py  generate_factorial_directed_ddm.py  results-old.py  results_directed_ddm.py  results_factorial_directed_ddm.py  simulation.py  simulation_new_sigma_z.py
integrative_model/: analysis.py  calibration_histogram.py  data_check.py  generate_factorial_integrative_ddm.py  integrative_ddm_analysis.py  integrative_ddm_analysis_conditions.ipynb  integrative_ddm_analysis_conditions.py  integrative_ddm_analysis_conditions_new.py  integrative_ddm_sim.py  plots.py  simulation.py  train_integrative_ddm.py  train_integrative_ddm_jax.py  validate_integrative_ddm.py  workflow.py
scripts/: cross_validation_generate.py  directed_ddm_analyze.py  directed_ddm_analyze_factorial.py  directed_ddm_analyze_factorial_ppc.py  directed_ddm_fit.py  directed_ddm_fit_factorial.py  directed_ddm_fit_factorial_parallel.py  directed_ddm_generate.py  directed_ddm_generate_factorial.py  directed_exploratory_analysis.py  integrative_ddm_analyze.py  integrative_ddm_analyze_results_factorial.py  integrative_ddm_data_check.py  (+4 more)
(+45 files in other folders)
