[project]
name = "thesis-ddm"
version = "0.1.0"
description = ""
authors = [
    {name = "brunykrijgsman",email = "bruny_krijgsman@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bayesflow>=2.0.3",
    "cmdstanpy>=1.2.5",
    "ipykernel>=6.29.5",
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy<=2.2.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
    "tensorflow>=2.19.0",
    "tensorflow-metal>=1.2.0 ; sys_platform == 'darwin'",
]
